--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,21 +1,6 @@
 {
-    "TicTacToe": "Ta-Te-Tí",
     "selectGame": "Seleccionar juego:",
-    "readyPlayerOne":"¿Listo para jugar?",
-    "turnText": "Es el turno de {turn}",
-    "board" : "Tablero",
-    "user" : "Jugador 2",
-    "difficultyEasy" : "CPU fácil",
-    "difficultyMedium" : "CPU medio",
-    "difficultyHard" : "CPU difícil",
-    "whoWins" : "¡{player} ganó!",
-    "oponent" : "Oponente",
-    "draw" : "Empate",
-    "pageHomeWelcomeGender": "{gender, select, male {Hi man!} female {Hi woman!} other {Hi there!}}",
-    "pageHomeWelcomeRole": "{role, select, admin {Hi admin!} manager {Hi manager!} other {Hi visitor!}}",
-    "pageNotificationsCount": "{howMany, plural, one{1 message} other{{howMany} messages}}",
-    "mazeSolver" : "Resolver laberintos",
-    "explorerAI" : "Explorar con IA",
+
     "settings" : "Configuraciones",
     "itemSizeSelect" : "Tamaño de los items",
     "themeeSelect" : "Tema de la app",
@@ -24,5 +9,26 @@
     "system" : "Sistema",
     "languageSelect" : "Idioma",
     "english" : "Inglés",
-    "spanish" : "Español"
+    "spanish" : "Español",
+
+    "TicTacToe": "Ta-Te-Tí",
+    "turnText": "Es el turno de {turn}",
+    "board" : "Tablero",
+    "user" : "Jugador 2",
+    "difficultyEasy" : "CPU fácil",
+    "difficultyMedium" : "CPU medio",
+    "difficultyHard" : "CPU difícil",
+    "startOver" : "Start over",
+    "oponent" : "Oponente",
+    "whoWins" : "¡{player} ganó!",
+    "draw" : "Empate",
+    "readyPlayerOne":"¿Listo para jugar?",
+
+    "mazeSolver" : "Resolver laberintos",
+
+    "explorerAI" : "Explorar con IA",
+
+    "secretSanta" : "Amigo invisible",
+
+    "ascciTransformation" : "Transformación ascci"
 }
